...
        <variable
            name="host"
            type="com.example.spotifysearch.view.auth.AuthActivity" />
    </data>

    <RelativeLayout
        android:id="@+id/dialog_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <WebView
            android:id="@+id/webview"
...
                android:layout_height="wrap_content"
                android:text="Please Wait"
                android:textColor="@color/black" />
        </LinearLayout>

        <ImageView
            android:id="@+id/img_webview_close"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:onClick="@{(view)-> host.handleOnclick(view)}"
...
