<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="isloading"
            type="java.lang.Boolean" />

        <variable
            name="activity"
            type="com.example.spotifysearch.view.auth.AuthActivity" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundBlack"
        android:gravity="center"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/loadingview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="@{isloading ? View.VISIBLE : View.GONE}">

            <com.wang.avi.AVLoadingIndicatorView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:indicatorColor="@color/mainThemeGreen"
                app:indicatorName="LineScaleIndicator" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Please Wait"
                android:textColor="@color/white" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_authorization"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_back"
            android:onClick="@{(view)-> activity.handleOnclick(view)}"
            android:text="Authorize App" />

    </LinearLayout>


</layout>
